--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,23 +29,45 @@ dist.jar=${dist.dir}/NanInt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-lang3-3.6.jar=C:\\Users\\grdana\\Downloads\\commons-lang3-3.6\\commons-lang3-3.6.jar
-file.reference.log4j-1.2.17.jar=C:\\Users\\grdana\\Downloads\\log4j-1.2.17.jar
-file.reference.msgparser-1.15.jar=C:\\Users\\grdana\\Downloads\\msgparser-1.15\\dist\\msgparser-1.15.jar
-file.reference.opencsv-4.0.jar=C:\\Users\\grdana\\Downloads\\opencsv-4.0.jar
-file.reference.poi-3.9.jar=C:\\Users\\grdana\\Downloads\\msgparser-1.15\\lib\\poi-3.9.jar
-file.reference.poi-scratchpad-3.9.jar=C:\\Users\\grdana\\Downloads\\msgparser-1.15\\lib\\poi-scratchpad-3.9.jar
-file.reference.sqlite-jdbc-3.20.0.jar=C:\\Users\\grdana\\Downloads\\sqlite-jdbc-3.20.0.jar
+file.reference.commons-collections4-4.1.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\lib\\commons-collections4-4.1.jar
+file.reference.commons-lang3-3.6.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\commons-lang3-3.6\\commons-lang3-3.6.jar
+file.reference.commons-logging-1.2.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\commons-logging-1.2.jar
+file.reference.fontbox-2.0.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\pdfbox-2.0.9\\fontbox-2.0.9.jar
+file.reference.log4j-api-2.11.0.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\apache-log4j-2.11.0-bin\\log4j-api-2.11.0.jar
+file.reference.log4j-core-2.11.0.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\apache-log4j-2.11.0-bin\\log4j-core-2.11.0.jar
+file.reference.msgparser-1.15.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\msgparser-1.15\\dist\\msgparser-1.15.jar
+file.reference.opencsv-4.1.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\opencsv-4.1.jar
+file.reference.pdfbox-2.0.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\pdfbox-2.0.9\\pdfbox-2.0.9.jar
+file.reference.pdfbox-debugger-2.0.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\pdfbox-2.0.9\\pdfbox-debugger-2.0.9.jar
+file.reference.pdfbox-tools-2.0.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\pdfbox-2.0.9\\pdfbox-tools-2.0.9.jar
+file.reference.poi-3.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\msgparser-1.15\\lib\\poi-3.9.jar
+file.reference.poi-ooxml-3.17.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\poi-ooxml-3.17.jar
+file.reference.poi-scratchpad-3.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\msgparser-1.15\\lib\\poi-scratchpad-3.9.jar
+file.reference.preflight-2.0.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\pdfbox-2.0.9\\preflight-2.0.9.jar
+file.reference.sqlite-jdbc-3.20.0.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\sqlite-jdbc-3.20.0.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\poi-bin-3.17-20170915\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
+file.reference.xmpbox-2.0.9.jar=C:\\GrdanA\\NetBeansProject\\Downloads\\pdfbox-2.0.9\\xmpbox-2.0.9.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-lang3-3.6.jar}:\
-    ${file.reference.opencsv-4.0.jar}:\
     ${file.reference.sqlite-jdbc-3.20.0.jar}:\
-    ${file.reference.msgparser-1.15.jar}:\
-    ${file.reference.poi-3.9.jar}:\
+    ${file.reference.opencsv-4.1.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.poi-scratchpad-3.9.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.poi-3.9.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.msgparser-1.15.jar}:\
+    ${file.reference.commons-lang3-3.6.jar}:\
+    ${file.reference.fontbox-2.0.9.jar}:\
+    ${file.reference.pdfbox-2.0.9.jar}:\
+    ${file.reference.pdfbox-debugger-2.0.9.jar}:\
+    ${file.reference.pdfbox-tools-2.0.9.jar}:\
+    ${file.reference.preflight-2.0.9.jar}:\
+    ${file.reference.xmpbox-2.0.9.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.log4j-api-2.11.0.jar}:\
+    ${file.reference.log4j-core-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
